--- a/Draw/Controller/Common/PassWordDialog~iPad.xib
+++ b/Draw/Controller/Common/PassWordDialog~iPad.xib
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
-			<string>IBUIView</string>
 			<string>IBUITextField</string>
-			<string>IBProxyObject</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -46,7 +46,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{580, 470}</string>
 								<reference key="NSSuperview" ref="792848927"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="453239455"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -60,7 +59,6 @@
 								<int key="NSvFlags">283</int>
 								<string key="NSFrame">{{370, 356}, {168, 74}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -90,7 +88,6 @@
 								<int key="NSvFlags">286</int>
 								<string key="NSFrame">{{40, 356}, {168, 74}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="498891824"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -108,7 +105,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{40, 100}, {500, 62}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="302784779"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -147,7 +143,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{40, 188}, {500, 62}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="483852944"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -177,7 +172,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{40, 276}, {500, 62}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="992100340"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -207,7 +201,6 @@
 								<int key="NSvFlags">306</int>
 								<string key="NSFrame">{{100, 22}, {380, 74}}</string>
 								<reference key="NSSuperview" ref="792848927"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="630384415"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -230,7 +223,6 @@
 						</array>
 						<string key="NSFrame">{{94, 20}, {580, 470}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="788537314"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -241,7 +233,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="792848927"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -548,7 +539,7 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -556,6 +547,6 @@
 			<string key="NS.key.0">logout@2x.png</string>
 			<string key="NS.object.0">{607, 514}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
