--- a/Draw/Controller/Common/RoomPasswordDialog.xib
+++ b/Draw/Controller/Common/RoomPasswordDialog.xib
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>IBUITextField</string>
+			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
-			<string>IBUIView</string>
 			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
+			<string>IBUITextField</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -36,15 +36,15 @@
 			</object>
 			<object class="IBUIView" id="353947277">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">292</int>
+				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="355607086">
 						<reference key="NSNextResponder" ref="353947277"/>
-						<int key="NSvFlags">274</int>
+						<int key="NSvFlags">293</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="486647150">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">274</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{0, -13}, {290, 215}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -58,7 +58,7 @@
 							</object>
 							<object class="IBUIButton" id="843693262">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">283</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{185, 142}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -88,7 +88,7 @@
 							</object>
 							<object class="IBUIButton" id="429406008">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">286</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{20, 142}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -106,7 +106,7 @@
 							</object>
 							<object class="IBUITextField" id="533475413">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">314</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{104, 48}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -148,7 +148,7 @@
 							</object>
 							<object class="IBUITextField" id="13498174">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">314</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{104, 100}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -174,7 +174,7 @@
 							</object>
 							<object class="IBUIButton" id="521410108">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">306</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{50, -2}, {190, 37}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -199,7 +199,7 @@
 							</object>
 							<object class="IBUILabel" id="838819293">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{15, 48}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -233,7 +233,7 @@
 							</object>
 							<object class="IBUILabel" id="744231171">
 								<reference key="NSNextResponder" ref="355607086"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{15, 100}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
 								<reference key="NSWindow"/>
@@ -618,7 +618,7 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1280" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -626,6 +626,6 @@
 			<string key="NS.key.0">logout@2x.png</string>
 			<string key="NS.object.0">{607, 514}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
