--- a/Draw/Controller/Common/InputDialog.xib
+++ b/Draw/Controller/Common/InputDialog.xib
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50d</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
-			<string>IBUIView</string>
 			<string>IBUITextField</string>
-			<string>IBProxyObject</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -39,13 +39,14 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="843572510">
 						<reference key="NSNextResponder" ref="777798319"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">293</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="367051569">
 								<reference key="NSNextResponder" ref="843572510"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{290, 180}</string>
 								<reference key="NSSuperview" ref="843572510"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="183721688"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -56,9 +57,10 @@
 							</object>
 							<object class="IBUIButton" id="183721688">
 								<reference key="NSNextResponder" ref="843572510"/>
-								<int key="NSvFlags">306</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{50, 14}, {190, 41}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="754622012"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -87,9 +89,10 @@
 							</object>
 							<object class="IBUITextField" id="754622012">
 								<reference key="NSNextResponder" ref="843572510"/>
-								<int key="NSvFlags">314</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{20, 67}, {250, 35}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="234037166"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="446577435">
 									<int key="NSColorSpace">3</int>
@@ -127,9 +130,10 @@
 							</object>
 							<object class="IBUIButton" id="234037166">
 								<reference key="NSNextResponder" ref="843572510"/>
-								<int key="NSvFlags">286</int>
+								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{23, 117}, {83, 41}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="404016124"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -151,9 +155,10 @@
 							</object>
 							<object class="IBUIButton" id="404016124">
 								<reference key="NSNextResponder" ref="843572510"/>
-								<int key="NSvFlags">283</int>
-								<string key="NSFrame">{{183, 117}, {83, 41}}</string>
+								<int key="NSvFlags">293</int>
+								<string key="NSFrame">{{187, 117}, {83, 41}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
+								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -168,6 +173,7 @@
 						</array>
 						<string key="NSFrame">{{15, 20}, {290, 180}}</string>
 						<reference key="NSSuperview" ref="777798319"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="367051569"/>
 						<reference key="IBUIBackgroundColor" ref="446577435"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -175,6 +181,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="843572510"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -292,10 +299,10 @@
 						<reference key="object" ref="843572510"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="234037166"/>
-							<reference ref="404016124"/>
 							<reference ref="754622012"/>
 							<reference ref="183721688"/>
 							<reference ref="367051569"/>
+							<reference ref="404016124"/>
 						</array>
 						<reference key="parent" ref="777798319"/>
 					</object>
@@ -346,12 +353,101 @@
 			<nil key="sourceID"/>
 			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontButton</string>
+					<string key="superclassName">UIGlossyButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">InputDialog</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="clickCancelButton:">id</string>
+						<string key="clickOkButton:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="clickCancelButton:">
+							<string key="name">clickCancelButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickOkButton:">
+							<string key="name">clickOkButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bgView">UIImageView</string>
+						<string key="cancelButton">FontButton</string>
+						<string key="okButton">FontButton</string>
+						<string key="targetTextField">UITextField</string>
+						<string key="titleLabel">FontButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bgView">
+							<string key="name">bgView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="cancelButton">
+							<string key="name">cancelButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="okButton">
+							<string key="name">okButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="targetTextField">
+							<string key="name">targetTextField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/InputDialog.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -359,6 +455,6 @@
 			<string key="NS.key.0">logout@2x.png</string>
 			<string key="NS.object.0">{607, 514}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
