--- a/Draw/Controller/Common/PassWordDialog.xib
+++ b/Draw/Controller/Common/PassWordDialog.xib
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50d</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">1926</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
-			<string>IBUIView</string>
 			<string>IBUITextField</string>
-			<string>IBProxyObject</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -35,18 +35,17 @@
 			</object>
 			<object class="IBUIView" id="409706297">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">292</int>
+				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="304768485">
 						<reference key="NSNextResponder" ref="409706297"/>
-						<int key="NSvFlags">274</int>
+						<int key="NSvFlags">301</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="581645390">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">274</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrameSize">{290, 235}</string>
 								<reference key="NSSuperview" ref="304768485"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="239453552"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,10 +56,9 @@
 							</object>
 							<object class="IBUIButton" id="857988017">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">283</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{185, 178}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -87,10 +85,9 @@
 							</object>
 							<object class="IBUIButton" id="516909111">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">286</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{20, 178}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="857988017"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -105,10 +102,9 @@
 							</object>
 							<object class="IBUITextField" id="349301112">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">314</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{20, 50}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="496652242"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -144,10 +140,9 @@
 							</object>
 							<object class="IBUITextField" id="496652242">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">314</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{20, 94}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="697516897"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -174,10 +169,9 @@
 							</object>
 							<object class="IBUITextField" id="697516897">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">314</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{20, 138}, {250, 31}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="516909111"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -204,10 +198,9 @@
 							</object>
 							<object class="IBUIButton" id="239453552">
 								<reference key="NSNextResponder" ref="304768485"/>
-								<int key="NSvFlags">306</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{50, 11}, {190, 37}}</string>
 								<reference key="NSSuperview" ref="304768485"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="349301112"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -230,7 +223,6 @@
 						</array>
 						<string key="NSFrame">{{15, 10}, {290, 235}}</string>
 						<reference key="NSSuperview" ref="409706297"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="581645390"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -241,7 +233,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="304768485"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -459,93 +450,12 @@
 			<nil key="sourceID"/>
 			<int key="maxID">34</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">InputDialog</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCancelButton:">id</string>
-						<string key="clickOkButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCancelButton:">
-							<string key="name">clickCancelButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickOkButton:">
-							<string key="name">clickOkButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgView">UIImageView</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="contentView">UIView</string>
-						<string key="okButton">UIButton</string>
-						<string key="targetTextField">UITextField</string>
-						<string key="titleLabel">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgView">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contentView">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="okButton">
-							<string key="name">okButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetTextField">
-							<string key="name">targetTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/InputDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PassWordDialog</string>
-					<string key="superclassName">InputDialog</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="anotherPasswordTextField">UITextField</string>
-						<string key="oldPasswordTextField">UITextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="anotherPasswordTextField">
-							<string key="name">anotherPasswordTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="oldPasswordTextField">
-							<string key="name">oldPasswordTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PassWordDialog.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -553,6 +463,6 @@
 			<string key="NS.key.0">logout@2x.png</string>
 			<string key="NS.object.0">{607, 514}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
